--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ org.gradle.daemon = true
 org.gradle.parallel = true
 org.gradle.jvmargs = -Xmx3072m
 
-android.enableBuildCache = true
+#android.enableBuildCache = true
 
 android.useAndroidX=true
-android.enableJetifier=true
+#android.enableJetifier=false
