--- a/BlueMS/build.gradle
+++ b/BlueMS/build.gradle
@@ -102,12 +102,6 @@ android {
     }
 
     //to use until all the string doesn't have a chinese translation
-    lintOptions {
-        checkReleaseBuilds false
-        // Or, if you prefer, you can continue to check for errors in release builds,
-        // but continue the build even when errors are found:
-        abortOnError false
-    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -117,12 +111,17 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
-
     packagingOptions {
-        exclude "thirdpartynotice.txt"
-        exclude 'maven.properties'
-        exclude 'META-INF/DEPENDENCIES'
+        resources {
+            excludes += ['thirdpartynotice.txt', 'maven.properties', 'META-INF/DEPENDENCIES']
+        }
     }
+
+    lint {
+        abortOnError false
+        checkReleaseBuilds false
+    }
+    namespace 'com.st.BlueMS'
 
 }
 
@@ -149,49 +148,49 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation group: 'com.google.android.material', name: 'material', version: "$rootProject.androidx_materialVersion"
+    implementation group: 'com.google.android.material', name: 'material', version: '1.7.0'
     implementation group: 'androidx.legacy', name: 'legacy-support-v13', version: "$rootProject.androidx_supportLegacy"
     implementation group: 'androidx.gridlayout', name: 'gridlayout', version: "$rootProject.androidx_gridLayout"
-    implementation group: 'androidx.appcompat', name: 'appcompat', version: "$rootProject.androidx_appCompatVersion"
-    implementation group: 'androidx.fragment', name: 'fragment-ktx', version: "$rootProject.androidx_fragmentVersion"
+    implementation group: 'androidx.appcompat', name: 'appcompat', version: '1.5.1'
+    implementation group: 'androidx.fragment', name: 'fragment-ktx', version: '1.5.5'
     implementation group: 'androidx.cardview', name: 'cardview', version: "$rootProject.androidx_cardViewVersion"
-    implementation group: 'androidx.constraintlayout', name: 'constraintlayout', version: "$rootProject.androidx_constraintLayoutVersion"
-    implementation group: 'androidx.annotation', name:'annotation',version: "$rootProject.androidx_annotationVersion"
-    implementation group: 'androidx.recyclerview', name:'recyclerview', version:"$rootProject.androidx_recycleViewVersion"
-    implementation group: 'androidx.preference', name:'preference-ktx', version:"$rootProject.androidx_preferenceVersion"
+    implementation group: 'androidx.constraintlayout', name: 'constraintlayout', version: '2.1.4'
+    implementation group: 'androidx.annotation', name:'annotation',version: '1.5.0'
+    implementation group: 'androidx.recyclerview', name:'recyclerview', version: '1.2.1'
+    implementation group: 'androidx.preference', name:'preference-ktx', version: '1.2.0'
 
-    implementation group:'androidx.room', name:'room-runtime', version: "$rootProject.androidx_roomVersion"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation group:'androidx.room', name:'room-runtime', version: '2.4.3'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor group:'androidx.room', name:'room-compiler', version: "$rootProject.androidx_roomVersion"
+    annotationProcessor group:'androidx.room', name:'room-compiler', version: '2.4.3'
 
     // Lifecycle components
     implementation group: 'androidx.lifecycle', name: 'lifecycle-extensions', version: "$rootProject.androidx_lifecycleExtVersion"
-    implementation group: 'androidx.lifecycle', name: 'lifecycle-viewmodel-ktx', version: "$rootProject.androidx_lifecycleExtVersion"
-    implementation group: 'androidx.lifecycle', name: 'lifecycle-viewmodel-savedstate', version: "$rootProject.androidx_lifecycleSaveStateVersion"
+    implementation group: 'androidx.lifecycle', name: 'lifecycle-viewmodel-ktx', version: '2.5.1'
+    implementation group: 'androidx.lifecycle', name: 'lifecycle-viewmodel-savedstate', version: '2.5.1'
 
 
     // ibm speech to text
-    implementation(group: 'com.ibm.watson', name: 'speech-to-text', version: '8.1.0'){
+    implementation(group: 'com.ibm.watson', name: 'speech-to-text', version: '10.1.0'){
         exclude group: 'com.google.code.findbugs', module: 'annotations'
     }
 
     //use the v 3.11 to avoid crash with ibm
-    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.11.0'
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '5.0.0-alpha.10'
 
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
     //memory leak detector
-    debugImplementation group: 'com.squareup.leakcanary', name: 'leakcanary-android', version: "$leakcanaryVersion"
+    debugImplementation group: 'com.squareup.leakcanary', name: 'leakcanary-android', version: '2.10'
 
-    testImplementation group: 'org.json', name: 'json', version: '20140107'
+    testImplementation group: 'org.json', name: 'json', version: '20220924'
     //since the json lib is inside the android sdk
-    testImplementation group: 'junit', name: 'junit', version: "$rootProject.junitVersion"
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: "$rootProject.mockitoVersion"
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.10.0'
 
-    androidTestImplementation group:'androidx.test', name:'runner', version:"$rootProject.androidx_runnerVersion"
-    androidTestImplementation group:'androidx.test', name:'rules', version:"$rootProject.androidx_rulesVersion"
-    androidTestImplementation group:'androidx.test.espresso', name: 'espresso-core', version:"$rootProject.androidx_espressoVersion"
+    androidTestImplementation group:'androidx.test', name:'runner', version: '1.5.1'
+    androidTestImplementation group:'androidx.test', name:'rules', version: '1.5.0'
+    androidTestImplementation group:'androidx.test.espresso', name: 'espresso-core', version: '3.5.0'
 
 }
 
