--- a/BlueMS/src/main/AndroidManifest.xml
+++ b/BlueMS/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.st.BlueMS">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- needed for the BlueVoice demos -->
@@ -39,7 +38,8 @@
             android:configChanges="keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:theme="@style/AppFullscreenTheme">
+            android:theme="@style/AppFullscreenTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -92,7 +92,8 @@
             android:name=".NfcNodeConnection"
             android:label="@string/title_activity_nfc_node_connection"
             android:launchMode="singleInstance"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:exported="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.st.BlueMS.MainActivity" />
@@ -129,7 +130,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.st.BlueMS.NodeListActivity" />
         </activity> <!-- End: integrate the BlueSTSDK.gui activity in the app, setting the parent activity -->
-        <receiver android:name=".NfcNodeConnection$InsertPairPin">
+        <receiver android:name=".NfcNodeConnection$InsertPairPin"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.bluetooth.device.action.PAIRING_REQUEST" />
                 <action android:name="android.bluetooth.device.action.BOND_STATE_CHANGED" />
