--- a/BlueMS/src/main/AndroidManifest.xml
+++ b/BlueMS/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:logo="@drawable/app_logo"
+        android:logo="@drawable/sisgeo_app_logo"
         android:theme="@style/AppTheme"
         android:requestLegacyExternalStorage="true"
         >
